2010-05-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Fixed the negative
	timestamp for bug: 2926876

2010-05-10  Sergio Martin  <sergio.martin@artica.es>
	
	* operation/agentes/datos_agente.php: Fixed the
	deletion of text modules raw data for bug: 2980086
 
2010-05-06 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk

	* include/config.inc.php: fixed the operation require when the php file to
	call config.php have a file with same name of "config_process.php" ...in
	rare cases.
	
	* include/config_process.php: fixed the operation require when the php file
	to call config.php have a file with same name of "functions.php",
	"functions_db.php", "functions_config.php" ...in rare cases. 
	
	* include/functions.php, include/functions_config.php: cleaned the source
	code.

2010-05-04  Sergio Martin  <sergio.martin@artica.es>

	Merged bugfix from trunk

	* godmode/agentes/agent_template.php: Fixed the
	link to edit module for bug: 2996521

2010-04-15 Sergio Martin <sergio.martin@artica.es>

	Merged bugfix from trunk

        * godmode/users/user_list.php: fixed bug 2987177. Wrong index was 
	  associated with the delete icon in the users list.

2010-03-21  Sancho Lerena <slerena@artica.es>

	* godmode/agentes/modificar_agente.php: Admin can see everything
	even if agent has a invalid group (group which not exist).
	This was important because agents with invalid group was
	"Invisible" until now.

2010-03-10  Sancho Lerena <slerena@artica.es>

	Merged bugfix from trunk:

	 * godmode/users/user_list.php: Fixed bug which doesn't allow to
        delete users.
        
        * godmode/users/configure_user.php: Fixed bug with profile assigment
        (Mixed the current user and selected user).

2010-03-06  SAncho Lerena  <slerena@artica.es>

	* extras/pandoradb_migrate_v2.x_to_v3.0.sql: Missing SQL for migration
	which affets incident system

        * extensions/dbmanager.php,
        extensions/plugin_registration.php