@@ -1,3 +1,11 @@
+2010-05-18  Miguel de Dios  <miguel.dedios@artica.es>
+
+	Merged bugfix from trunk
+
+	* include/fgraph.php: fixed the fgraph when cron get a report in PDF for to
+	send, and this situation the fgraph execute in localhost althought it'snt
+	login.
+
 2010-05-13  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_ui.php: Fixed the negative
